# A-TEAM

./: .gitignore  A-team.srctrlprj  CMakeLists.txt  OLDproposition.gr  README.txt  compile_commands.json  ideasIntermittedComputing.txt  masterDebug.txt  transcript
antlr4_grammar/: CMakeLists.txt  proposition.gr  proposition.interp  proposition.tokens  propositionLexer.interp  propositionLexer.tokens
antlr4_grammar/include/: propositionBaseListener.h  propositionLexer.h  propositionListener.h  propositionParser.h
antlr4_grammar/src/: propositionBaseListener.cpp  propositionLexer.cpp  propositionListener.cpp  propositionParser.cpp
cmake/: FindANTLR.cmake  FindSPOTLTL.cmake  FindZ3.cmake
src/assertionMiner/miner/: CMakeLists.txt
src/assertionMiner/miner/include/: CommandLineReader.hh  Miner.hh  ModuleManager.hh
src/assertionMiner/miner/src/: .Miner.cc.swp  CommandLineReader.cc  Miner.cc  ModuleManager.cc  main.cc
src/assertionMiner/modules/coneMiner/manualDefinition/: CMakeLists.txt
src/assertionMiner/modules/coneMiner/manualDefinition/src/: ManualDefinition.cc
src/assertionMiner/modules/propertyMiner/ateamMiner/: CMakeLists.txt
src/assertionMiner/modules/propertyMiner/ateamMiner/include/: AntecedentGenerator.hh  AteamMiner.hh  ContingencyTable.hh  supportMethods.hh  supportTypes.hh
src/assertionMiner/modules/propertyMiner/ateamMiner/src/: .AteamMiner.cc.swp  AntecedentGenerator.cc  AteamMiner.cc  ContingencyTable.cc  FaultChecker.cc  SetsGenerator.cc  supportMethods.cc  supportTypes.cc
src/oden/: CMakeLists.txt
src/oden/include/oden/: Checker.hh  List.hh  List.i.hh  OdenVisitor.hh  odenEnums.hh  types.hh
src/oden/include/oden/classes/: ConeOfInfluence.hh  Logic_t.hh  Trace.hh  TraceRepository.hh
src/oden/include/oden/classes/atom/: Atom.hh  Atom.i.hh  Constant.hh  Variable.hh  Variable.i.hh
src/oden/include/oden/classes/expression/: BitSelector.hh  BitSelector.i.hh  Expression.hh  Expression.i.hh  TypeCast.i.hh
src/oden/include/oden/classes/temporal/: NextOperator.hh  NextOperator.i.hh  PastOperator.i.hh  temporal.hh
src/oden/include/oden/modules/: ConeMiner.hh  PropertyMiner.hh  PropertyQualifier.hh  PropositionMiner.hh  TraceReader.hh  modules.hh
src/oden/include/oden/modules/default/: MangroveTraceReader.hh
src/oden/include/oden/odenUtils/: applicationUtils.hh  odenUtils.hh  propositionUtils.hh
src/oden/include/oden/odenUtils/rapidxml/: rapidxml.hh  rapidxml_utils.hh
src/oden/include/oden/parser/: PropositionParser.hh
src/oden/include/oden/visitors/: CopyVisitor.hh  CounterVisitor.hh  DepthVisitor.hh  PrinterVisitor.hh  visitors.hh
src/oden/src/: OdenVisitor.cc  types.cc
src/oden/src/classes/: .Trace.cc.swp  ConeOfInfluence.cc  Logic_t.cc  Trace.cc  TraceRepository.cc
src/oden/src/classes/atom/: BooleanVariable.cc  Constant.cc  LogicVariable.cc  NumericVariable.cc
src/oden/src/classes/expression/: BitSelector.cc  Expression.cc  TypeCast.cc
src/oden/src/classes/temporal/: NextOperator.cc  PastOperator.cc  ReleaseOperator.cc  UntilOperator.cc
src/oden/src/modules/: ConeMiner.cc  PropertyMiner.cc  PropertyQualifier.cc
src/oden/src/modules/default/: MangroveTraceReader.cc
src/oden/src/odenUtils/: applicationUtils.cc  propositionUtils.cc  templateUtils.cc  xmlUtils.cc
src/oden/src/parser/: .PropositionParser.cc.swp  PropositionParser.cc
src/oden/src/visitors/: CopyVisitor.cc  CounterVisitor.cc  DepthVisitor.cc  PeTraceChanger.cc  PrinterVisitor.cc
src_old/assertionMiner/: CMakeLists.txt
src_old/assertionMiner/modules/: CMakeLists.txt
src_old/assertionMiner/modules/coneMiner/manualDefinition/include/: ManualDefinition.hh
src_old/assertionMiner/modules/propertyMiner/: CMakeLists.txt
src_old/assertionMiner/modules/propertyMiner/ateamMiner/: CMakeLists.txt
src_old/assertionMiner/modules/propertyMiner/ateamMiner/include/: AntecedentGenerator.hh  FaultChecker.hh  SetsGenerator.hh
src_old/assertionMiner/modules/propertyMiner/ateamMiner/src/: AteamMiner.cc  FaultChecker.cc  supportTypes.cc
src_old/assertionMiner/modules/propertyPrinter/pslPrinter/: CMakeLists.txt
src_old/assertionMiner/modules/propertyPrinter/pslPrinter/src/: PSLPrinter.cc  PSLPropositionPrinter.cc
src_old/assertionMiner/modules/propertyQualification/: CMakeLists.txt
src_old/assertionMiner/modules/propertyQualification/faultBasedQualifier/: CMakeLists.txt
src_old/assertionMiner/modules/propertyQualification/faultBasedQualifier/include/: FaultBasedQualifier.hh
src_old/assertionMiner/modules/propositionMiner/: CMakeLists.txt
src_old/assertionMiner/modules/propositionMiner/TBPropositionMiner/: CMakeLists.txt
src_old/assertionMiner/modules/propositionMiner/booleanVariables/: CMakeLists.txt
tests/: CMakeLists.txt  Converted.txt  Logicvars.txt  TrueBoolean.txt  ciao.csv  contingency_table_analysis.csv
tests/CC/: mining_CC.xml
tests/FIFO/: fifo_mem.vcd  mining_fifo.xml  trace.mangrove  trace.variables
tests/OLDbridge/: bridge.cone.alias  mining_bridge.xml  trace.variables
tests/_CC/: CC.cone.alias  CC.v  CC.vcd  TestCC.v  mining_CC.xml  trace.mangrove  trace.variables
tests/arbiter/: Max1VarAnt.txt  Max3VarAnt.txt  arbiter.vcd  coverageReport.txt  mining_arbiter.xml  trace.mangrove  trace.variables
tests/arbiter_goldmine/: arb2.vcd  mining_arbiter.xml  trace.mangrove  trace.variables
tests/bl_master/: bl_master.vcd  mining_bl_master.xml  mining_bl_master_new.xml  trace.variables
tests/bl_slave_0/: mining_bl_slave.xml
tests/bl_slave_1/: mining_bl_slave.xml
tests/bridge/: Max1VarAnt.txt  Max3VarAnt.txt  coverageReport.txt  mining_bridge.xml  trace.variables
tests/camellia/: mining_camellia.xml
tests/due_otto/: due_otto.vcd  mining_due_otto.xml
tests/filter/: axcSobelLessVar.xml  trace.variables
tests/fir_filter/: fir_filter.qpf  fir_filter.v  fir_filter.vwf  fir_filter_square.vt  lpm_mult0.v  lpm_mult0_bb.v
tests/fsm_controller/: fsm_controller.vcd  fsm_controller_funzionaRESET.vcd  fsm_controller_reset.vcd  mining_fsm_controller.xml  trace.mangrove  (+1 more)
vcd2mangrove/: Verilog_VCD.py  vcd2mangrove.py
(+105 files in other folders)
