#############################################
# Include modules
#############################################

message("-- Including modules...")
add_subdirectory(coneMiner)
add_subdirectory(propertyMiner)
add_subdirectory(propositionMiner)
add_subdirectory(propertyQualification)
add_subdirectory(propertyPrinter)
